Iterazione 2 - implementazione frontend

--- a/src/main/frontend/src/index.css
+++ b/src/main/frontend/src/index.css
@@ -1,13 +1,12 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.background-image {
+  background-color: #f4f4f5;
+  background-image: radial-gradient(
+    #e4e4e7 1.4000000000000001px,
+    #f4f4f5 1.4000000000000001px
+  );
+  background-size: 28px 28px;
 }
